[package]
name = "modtool-rs"
version = "0.1.0"
authors = ["Tallie Tye <tallie.tye@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.2.4", features = ["desktop"] }

log = "0.4.6"

# WebAssembly Debug
wasm-logger = "0.2.0"
console_error_panic_hook = "0.1.7"
fermi = "0.2.1"

tokio = { version = "0.2.21", features = ["full", "time"] }
reqwest = { version = "0.11.11", features = ["json", "blocking"] }
lazy_static = "1.4.0"
serde = "1.0.139"
serde_json = "1.0.82"
async-std = "1.12.0"
